--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate": "node --loader ts-node/esm ./src/app/faker/generate.ts > ./src/app/faker/database.json"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
+    "ts-node": "^10.7.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -35,5 +38,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
-  }
+  },
+  "type": "module"
 }
