--- a/angular/package.json
+++ b/angular/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "generate": "node --loader ts-node/esm ./src/app/faker/generate.ts > ./src/app/faker/database.json"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
