--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "e-kay project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm install && cd angular/ && npm install && ng serve "
   },
   "repository": {
     "type": "git",
